Fix z-index styling

--- a/style.css
+++ b/style.css
@@ -270,6 +270,8 @@ p {
 
 .photo-grid-mobile {
   display: none;
+  position: relative;
+  z-index: 2;
 }
 
 /* Styles for mobile devices */
@@ -294,5 +296,11 @@ p {
     margin: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    padding-top: 100px;
   }
+
+  .a{
+    padding-bottom: 55px;
+  }
+  
 }
